# python_cpp_shm_integration_poc

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/src/: cliente_cpp.cpp
python/: host.py
